--- a/index.html
+++ b/index.html
@@ -2,25 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Suzzy</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>Hello world, We are Developer (Me and Suzzy)</h1>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
+    <nav id="navbar">
+      <ul>
+        <li>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">GitHub</a>
+        </li>
+      </ul>
+    </nav>
+    <section id="Welcome-section">
+      <h1>Welcome</h1>
+    </section>
+    <section id="projects">
+      <h1>This are my projects</h1>
+      <div class="projects-wrapper">
+        <div class="project-card"> 
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>  
+        <div class="project-card">
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>
+        <div class="project-card">
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>
+        <div class="project-card">
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>
+        <div class="project-card">
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>
+        <div class="project-card">
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+        </div>
+      </div>
+  </section>
   </body>
 </html>
