--- a/index.html
+++ b/index.html
@@ -4,43 +4,64 @@
     <meta charset="UTF-8">
     <title>Suzzy</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    
-  </head>
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/projects.css">
 
+    <style>
+      footer {
+        margin-top: 5rem;
+        padding-left: 3.9rem;
+      }
+    </style>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </head>
   <body>
-    <nav id="navbar">
+    <nav id="navbar" class="navbar">
       <ul>
+        <li>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Home</a>
+        </li>
+        <li>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Projects</a>
+        </li>
+        <li>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Certifications</a>
+        </li>
         <li>
           <a href="https://github.com/sueKK/Suzzy-and-Irakli">GitHub</a>
         </li>
       </ul>
     </nav>
-    <section id="Welcome-section">
+    <section id="welcome-section" class="hero">
       <h1>Welcome</h1>
     </section>
     <section id="projects">
-      <h1>This are my projects</h1>
+      <h1>Projects</h1>
       <div class="projects-wrapper">
         <div class="project-card"> 
-          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Suzzy & Ika</a>
         </div>  
         <div class="project-card">
-          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Suzzy & Ika</a>
         </div>
         <div class="project-card">
-          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Suzzy & Ika</a>
         </div>
         <div class="project-card">
-          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Suzzy & Ika</a>
         </div>
         <div class="project-card">
-          <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
+          <a href="https://github.com/sueKK/Suzzy-and-Irakli">Suzzy & Ika</a>
         </div>
         <div class="project-card">
           <a href="https://github.com/sueKK/Suzzy-and-Irakli">suzzy and irakli</a>
         </div>
       </div>
   </section>
+  <footer>
+    This is cool
+  </footer>
   </body>
 </html>
